# modern_marwar

./: README.md  pyproject.toml
.github/workflows/: main.yml
modern_marwar_erp/: hooks.py  modules.txt
modern_marwar_erp/docevents/: payment_entry.py  sales_invoice.py
modern_marwar_erp/fixtures/: custom_field.json  property_setter.json
modern_marwar_erp/modern_marwar_erp/doctype/additional_discount_slabs/: additional_discount_slabs.js  additional_discount_slabs.json  additional_discount_slabs.py  test_additional_discount_slabs.py
modern_marwar_erp/modern_marwar_erp/doctype/barcode_print/: barcode_print.js  barcode_print.json  barcode_print.py  test_barcode_print.py
modern_marwar_erp/modern_marwar_erp/doctype/discount_slab_days/: discount_slab_days.json  discount_slab_days.py
modern_marwar_erp/modern_marwar_erp/print_format/barcode/: barcode.json
modern_marwar_erp/modern_marwar_erp/print_format/sales_invoice_e_invoice/: sales_invoice_e_invoice.json
modern_marwar_erp/modern_marwar_erp/report/invoice_additional_discounts/: invoice_additional_discounts.js  invoice_additional_discounts.json  invoice_additional_discounts.py
